chore: sync template for 8da1fc3

--- a/default/Makefile.toml
+++ b/default/Makefile.toml
@@ -1,5 +1,6 @@
 [env]
 CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true
+CARGO_MAKE_CLIPPY_ARGS = "--all-features -- -D warnings"
 
 # stctl
 [tasks.stctl]
